[package]
name = "stfed"
version = "1.0.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
anyhow = { version = "1.0", default-features = false, features = ["std", "backtrace"] }
globset = { version = "0.4", default-features = false }
log = { version = "0.4", default-features = false, features = ["max_level_trace", "release_max_level_info"] }
quick-xml = { version = "0.23", default-features = false, features = ["serialize"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std", "raw_value"] }
shlex = { version = "1.1", default-features = false }
simple_logger = { version = "2.2", default-features = false }
structopt = { version = "0.3", default-features = false }
thiserror = { version = "1.0", default-features = false }
toml = { version = "0.5", default-features = false }
ureq = { version = "2.5", default-features = false }
url = { version = "2.2", default-features = false, features = ["serde"] }
xdg = { version = "2.4", default-features = false }
