[package]
name = "stfed"
version = "1.0.2"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
anyhow = { version = "1.0.86", default-features = false, features = ["std", "backtrace"] }
globset = { version = "0.4.15", default-features = false }
log = { version = "0.4.22", default-features = false, features = ["max_level_trace", "release_max_level_debug", "std"] }
quick-xml = { version = "0.36.1", default-features = false, features = ["serialize"] }
serde = { version = "1.0.204", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1.0.128", default-features = false, features = ["std", "raw_value"] }
shlex = { version = "1.3.0", default-features = false }
simple_logger = { version = "5.0.0", default-features = false, features = ["colors", "stderr"] }
thiserror = { version = "1.0.63", default-features = false }
toml = { version = "0.8.14", default-features = false, features = ["parse"] }
ureq = { version = "2.10.1", default-features = false }
url = { version = "2.5.2", default-features = false, features = ["serde"] }
xdg = { version = "2.5.2", default-features = false }
